Expose REST service

--- a/config/pdfsummarizer.conf
+++ b/config/pdfsummarizer.conf
@@ -1,4 +1,6 @@
 [MAIN]
+base_dir: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer
+static_folder: %(base_dir)s/static
 project_folder: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer
 output_dir: %(project_folder)s/output
 filter_tables: true
@@ -12,8 +14,12 @@ CELL_MIN_WIDTH: 2.0
 MAX_RECURSION: 100
 ADJ_DISTANCE: 1.0
 SENTENCES_COUNT = 10
+[REST]
+HOST : vd-w2k8-java-23.main.oecd.org
+PORT : 8085
 [SUMMARIZER]
-PDF_ROOT_FOLDER: Y:\2016
+STOP_WORDS_FOLDER : C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\data\stopwords
+PDF_ROOT_FOLDER: Y:
 EXTRACT_SUMMARY: false
 OUTPUT_FOLDER: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\output\Summaries\
 NB_PROCESSES: 2
