bug fix to save files locally on windows platform + strange config bug

--- a/config/pdfsummarizer.conf
+++ b/config/pdfsummarizer.conf
@@ -17,6 +17,7 @@ SENTENCES_COUNT = 10
 [REST]
 HOST : vd-w2k8-java-23.main.oecd.org
 PORT : 8085
+OUTPUT_FOLDER: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\output
 [SUMMARIZER]
 STOP_WORDS_FOLDER : C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\data\stopwords
 PDF_ROOT_FOLDER: Y:
