Bug fix: strip off page number gone wrong...

--- a/config/linux-pdfsummarizer.conf
+++ b/config/linux-pdfsummarizer.conf
@@ -17,6 +17,7 @@ SENTENCES_COUNT = 10
 [REST]
 HOST : 127.0.0.1
 PORT : 8085
+OUTPUT_FOLDER: /home/stephane/Playground/PycharmProjects/pdf-summarizer/out
 [SUMMARIZER]
 STOP_WORDS_FOLDER : /home/stephane/Playground/PycharmProjects/pdf-summarizer/data/stopwords
 PDF_ROOT_FOLDER: /media/stephane/Storage/OECD/pdfs
