--- a/config/pdfsummarizer.conf
+++ b/config/pdfsummarizer.conf
@@ -20,7 +20,7 @@ PORT : 8085
 OUTPUT_FOLDER: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\output
 [SUMMARIZER]
 STOP_WORDS_FOLDER : C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\data\stopwords
-PDF_ROOT_FOLDER: Y:
+PDF_ROOT_FOLDER: Y:\2017\02\21
 EXTRACT_SUMMARY: false
 OUTPUT_FOLDER: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\output\Summaries\
 NB_PROCESSES: 2
