--- a/pdfparser/config/pdfsummarizer.conf
+++ b/pdfparser/config/pdfsummarizer.conf
@@ -19,8 +19,9 @@ HOST : vd-w2k8-java-23.main.oecd.org
 PORT : 8085
 OUTPUT_FOLDER: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\output
 [SUMMARIZER]
+FAILED_SUMMARY_FOLDER : C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\summaries
 STOP_WORDS_FOLDER : C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\data\stopwords
-PDF_ROOT_FOLDER: Y:\2017\02\21
+PDF_ROOT_FOLDER: Y:
 EXTRACT_SUMMARY: false
 OUTPUT_FOLDER: C:\Users\Varin_S\Projects\python-projects\PDFSummarizer\output\Summaries\
 NB_PROCESSES: 2
